--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -10,7 +10,7 @@ a{
 }
 html{
     width: 100%;
-    height: 310%;
+    height: 100%;
 }
 body{
     width: auto; 
@@ -115,6 +115,19 @@ input:disabled{
     display: inline-block;
     width: 80%;
     color: red;
+}
+.imgError{
+    display: block;
+    width: 600px;
+    margin: auto;
+    margin-top: 200px;
+}
+.divError{
+    width: 100%;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #F73C90;
+    text-align: center;
 }
 caption{
     color: #59483e;
