--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -147,7 +147,7 @@ tr:nth-of-type(even){
 td img{
     width: 30px;
 }
-.script tr td:nth-of-type(2){
+.script tr td:nth-of-type(n+2){
     width: 30px;
 }
 .error{
